--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <h1>Shreya Parsewar</h1>
                 <p>Full Stack Developer</p>
                 <a href="#projects" class="cta-button">View My Work</a>
-                <a href="assets/Shreya_Parsewar_Resume.pdf" class="cta-button secondary" target="_blank">See My Resume</a>
+                <a href="assets/Shreya Parsewar Resume.pdf" class="cta-button secondary" target="_blank">See My Resume</a>
             </div>
             <div class="hero-image">
                 <img src="assets/shreya.jpg" alt="Shreya Parsewar">
